# Thesis-2022

./: .clang-format  Dockerfile  Singularity.def  docker-compose.yaml  experiment_results.json  run-rem.sh  run-singularity-rem.sh  run-singularity-single.sh  run-singularity.sh  run-slurm.sh  run-slurm_background.sh  run-slurm_baseline.sh  run-slurm_bsat.sh  run-slurm_eaer.sh  run-slurm_mcper_c.sh  run-slurm_mcper_c_plus_xl.sh  run-slurm_mcper_c_xl.sh  run-slurm_mcper_t.sh  run-slurm_mcper_t_plus.sh  run-slurm_php6.sh  run-slurm_php8.sh  run-slurm_steiner.sh  run.sh
cmaes-optimizer/: CMakeLists.txt
cmaes-optimizer/src/: main.cpp
cmaes-optimizer/src/glucose/core/: Dimacs.h  Main.cc  Makefile  Solver.cc  Solver.h
cmaes-optimizer/src/glucose/utils/: ParseUtils.h
cmaes-optimizer/src/optimizers/baseline/: baseline.cpp  baseline.h
cmaes-optimizer/src/optimizers/cmaes/: cmaes_optimizer.cpp  cmaes_optimizer.h  main.cpp
cmaes-optimizer/src/optimizers/commons/: cnf.cpp  cnf.h  cnf_a.cpp  cnf_a.h  cnf_er.cpp  cnf_er.h  commons.cpp  commons.h  dsu.cpp  dsu.h  optimizer.cpp  optimizer.h  sample.cpp  sample.h  solver.cpp  solver.h
cmaes-optimizer/src/optimizers/eaer/: eaer_optimizer.cpp  eaer_optimizer.h
cmaes-optimizer/src/optimizers/gaa/: gaa_optimizer.cpp  gaa_optimizer.h
cmaes-optimizer/src/optimizers/gaer/: gaer_optimizer.cpp  gaer_optimizer.h
cmaes-optimizer/src/optimizers/mcper/: mcper_optimizer.cpp  mcper_optimizer.h
cmaes-optimizer/src/optimizers/null/: null_optimizer.cpp  null_optimizer.h
cmaes-optimizer/src/optimizers/oneshot/: one_shot_optimizer.cpp  one_shot_optimizer.h
cmaes-optimizer/src/runner/: experiment.h  runner.cpp
custom-ga-optimizer/: CMakeLists.txt
custom-ga-optimizer/src/: main.cpp
database/: MakePlots.ipynb  extract_experiment_results.sql  extract_ts.sql  init.sql
database/artifacts/: baseline.json  bsat.json  cb6.json  dubois100.json  experiment_results.json  mcp-erx.json  php8.json  steiner.json  urq.json
experiments/: 0_php_test.json  1_cmaes_dubois.json  1_cmaes_mass.json  1_cmaes_mass_1.json  1_cmaes_mass_2.json  1_cmaes_mass_heavy.json  1_cmaes_mass_light.json  1_cmaes_steiner.json  2_mcper_mass_light.json  3_gaer_php.json  4_null_php8.json  5_baseline.json  5_eaer_bsat_php8_steiner.json  5_gaa_gaer_null_bsat.json  5_gaa_gaer_null_php6.json  5_gaa_gaer_null_php8.json  5_gaa_gaer_null_steiner.json  5_gaa_gaer_null_steiner_x3.json  5_mcper-c-plus-xl.json  5_mcper-c-plus.json  5_mcper-c-xl.json  5_mcper-c_bsat_php8_steiner.json  5_mcper-t-plus.json  5_mcper-t_bsat_php8_steiner.json
experiments/5/: 5_background.json  5_baseline.json  5_eaer_bsat_php8_steiner.json  5_gaa_gaer_null_steiner.json  5_mcper-t_bsat_php8_steiner.json  5_php6_fix.json
experiments/6/: 6_large.json  6_large_2.json  6_large_3.json  6_mcper_1.json  6_mcper_10.json  6_mcper_100.json  6_mcper_1000.json  6_mcper_p_1.json  6_mcper_p_10.json  6_mcper_p_100.json  6_mcper_p_1000.json
experiments/7/: 7_mcper_1.json  7_mcper_10.json  7_mcper_100.json  7_mcper_1000.json  7_mcper_p_1.json  7_mcper_p_10.json  7_mcper_p_100.json  7_mcper_p_1000.json  7_oneshot.json  7_oneshot_php3.json  7_oneshot_php8.json  7_oneshot_rest.json
experiments/8/: 8_mcper_1.json  8_mcper_10.json  8_mcper_100.json  8_mcper_1000.json  8_mcper_p_1.json  8_mcper_p_10.json  8_mcper_p_100.json  8_mcper_p_1000.json
experiments/9/: 8_large.json  8_mcper_1.json  8_mcper_10.json  8_mcper_100.json  8_mcper_1000.json  8_mcper_p_1.json  8_mcper_p_10.json  8_mcper_p_100.json  8_mcper_p_1000.json
experiments/old/: 0_eaer_php3.json  0_mcper_php3.json  0_php_test.json  1_cmaes_dubois.json  1_cmaes_steiner.json  2_mcper_bsat.json  2_mcper_mass_light.json  3_gaer_dubois50.json  3_gaer_steiner.json  4_gaer_gaa_php8.json
glucose-3.0/: CMakeLists.txt
glucose-3.0/core/: Main.cc  Solver.cc  Solver.h  SolverTypes.h
optimizer/: CMakeLists.txt
optimizer/src/: main.cpp
results/: bsat_cmaes.xlsx  dubois50_cmaes.xlsx  dubois50_gaer.xlsx  dubois50_mcper.xlsx  php6_gaer.xlsx  php6_gaer_2.xlsx  php8_gaa_clean.xlsx  php8_gaer.xlsx  php8_gaer_clean.xlsx  php8_gaer_fine.xlsx  postgres_public_runs.xlsx  steiner_gaer.xlsx  ~$php6_gaer.xlsx
sat/: genhard.py
sat/DAC02Bench/: ian1.cnf
sat/benchmarks_part/: mp1-Nb5T06.cnf  mp1-Nb6T06.cnf  mp1-ps_5000_21250_3_0_0.8_0_1.50_0.cnf
sat/cb/: cb6.cnf  cb7.cnf
sat/php/: php-12.cnf  php-8.cnf  php-9.cnf
sat/polygon/: simple-unsat.cnf
sat/simpler_g3/: sv-comp19_prop-reachsafety.sine_8_true-unreach-call_true-termination.i-witness.cnf
sat/vs/: dlx1c.ucl.sat.chaff.4.1.bryant.cnf
scripts/: run-singularity.sh  run-slurm_large.sh  run.sh
scripts/mcper/: run-singularity_mcper.sh  run-slurm_mcper.sh  run_mcper.sh
scripts/old/: run-single.sh  run-slurm_mcper_c_plus.sh
